2000-03-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* genio.h:  removed.  (Only content was '/* delete me */'.)

	* Makefile.am arbiters.c backtrace.c debug.c dynl.c dynwind.c
	error.c filesys.c fluids.c gc.c gsubr.c guardians.c keywords.c
	libguile.h mallocs.c numbers.c print.c random.c read.c root.c
	srcprop.c stackchk.c struct.c threads.c throw.c variable.c:
	Removed reference to genio.h

2000-03-17  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* gc.c, gc.h: Cleanup of the change of 2000-03-15.
	Cluster sizes are now independent of GC trigger values.
	GUILE_GC_TRIGGER_n can now specify a relative trigger value:
	A negative integer gives fraction of total heap size in percent.
	(SCM_GC_TRIGGER_1, SCM_GC_TRIGGER_2): Default values set to -40.

	* init.c (scm_boot_guile_1): Introduced new variable
	GUILE_MAX_SEGMENT_SIZE; New environment variable names:
	GUILE_INIT_SEGMENT_SIZE_1, GUILE_GC_TRIGGER_1,
	GUILE_INIT_SEGMENT_SIZE_2, GUILE_GC_TRIGGER_2

2000-03-16  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
	
	* __scm.h (GC_FREE_SEGMENTS): Disable this until we have made
	freeing of segment work with the new GC scheme.  (Thanks to
	Michael Livshin.)  Oops, also happened to make GUILE_NEW_GC_SCHEME
	the default, but I'll let this change stay in CVS Guile since this
	code is not expected to contain serious bugs.
	
2000-03-16  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* gc.c, gc.h (scm_map_free_list): Define also if GUILE_DEBUG is
	defined.
	(scm_free_list_length): New procedure (GUILE_DEBUG).
	Fixed a small but serious bug introduced by the previous change.

	* gc.c (scm_gc_sweep): Moved variable n_objects to inner sweep
	loop and declare as register.

	* gc.c (scm_gc_sweep): Sigh... forgot to clear private freelists
	after GC.

Wed Mar 15 08:27:04 2000  Greg J. Badros  <gjb@cs.washington.edu>

	* fluids.c: Docstring patch from Keisuke Nishida.  Some
	reindentation, too, and a couple formals renamed.  Should
	fluid-set! return UNSPECIFIED instead of a value?
