@@ -50,6 +50,7 @@
 #include "unif.h"
 #include "feature.h"
 #include "fports.h"
+#include "vectors.h"
 
 #include "validate.h"
 #include "socket.h"
