@@ -54,6 +54,7 @@
 #include "unif.h"
 #include "eval.h"
 #include "read.h"
+#include "vectors.h"
 
 #include "strports.h"
 
